@@ -1,7 +1,7 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.470 2005/11/08 03:50:34 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.471 2005/11/08 04:04:06 agaffney Exp $
 
 *GLI-0.3 (27 Oct 2005)
 
@@ -16,6 +16,7 @@
   properly catch exceptions from do_recommended()
   src/GLIArchitectureTemplate.py:
   replace preinst, copy, postinst, rm steps with qmerge
+  whoops...that shouldn't have been commented out
 
   6 Nov 2005; Andrew Gaffney <agaffney@gentoo.org>
   src/GLIStorageDevice.py:
